--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11205,6 +11205,7 @@ label {
     height: 80px;
     width: 80px;
   }
+  .mid-cont model-viewer{width:100%;max-height:350px;min-height:350px;height:350px !important;}
   .banenrimage:before,.banenrimage:after{
     display: none;
   }
@@ -23472,7 +23473,11 @@ body button:focus,body button:hover{background:transparent !important;}
  .dark_theme .wallet .disconnect a:hover span{color:#b3b3b3 !important;transition:all 0.5s ease;}
  .nft_rankings .dropdown-menu{top:15px !important;}
  .main_navbar .position_relative{position:relative;}
-
+.threed_preview{display:block !important;column-count: 1;text-align:center;}
+.dark_theme .threed_preview h2{color:#fff !important;}
+.item_inner_img model-viewer{width:100%;height:300px !important;border-radius:0px;}
+.item_inner_img{border-radius:0px;}
+.mid-cont model-viewer{width:100%;max-height:600px;min-height:600px;height:600px !important;}
  @media screen and (min-width:768px){
   .nft_rankings .btn.btn-primary {
     width: 200px !important;
