--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23500,3 +23500,4 @@ body button:focus,body button:hover{background:transparent !important;}
  }
  .nft_activity button{ padding-left: 10px !important;
   padding-right: 10px !important;}
+  .main_navbar .noti_parent{z-index:999}
