--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23560,5 +23560,6 @@ body button:focus,body button:hover{background:transparent !important;}
 .light_theme .accordian_para a{color:#ccc !important}
 .light_theme .accordian_para a:hover{color:#fff !important;transition:all 0.5s ease;}
 .dark_theme .accordian_para a:hover{color:#fff !important;transition:all 0.5s ease;}
+.privacy ul li{transition: all 0.5s ease;}
 .dark_theme .privacy ul li{color:#fff !important;}
 .dark_theme .privacy ul li a:hover{color:#fff !important;transition: all 0.5s ease;}
