Document Changes_inner_height

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1903,6 +1903,7 @@ header .create_btn {
   .makeStyles-grid-78{
     padding-left: 35px !important;
   }
+  .logo_przn1 img{width:100px;margin:auto;}
   #customers tr td{
     font-size: 16px;
   }
